# skipbot

./: .gitignore  Cargo.toml  Makefile  README.md
research/: heuristic_research.md
src/: action.rs  bot.rs  card.rs  error.rs  game.rs  lib.rs  score.rs  state.rs  visualize.rs
src/bots/: heuristic_1.rs  heuristic_10.rs  heuristic_11.rs  heuristic_12.rs  heuristic_13.rs  heuristic_14.rs  heuristic_15.rs  heuristic_16.rs  heuristic_17.rs  heuristic_18.rs  heuristic_2.rs  heuristic_3.rs  heuristic_4.rs  heuristic_5.rs  heuristic_6.rs  heuristic_7.rs  heuristic_8.rs  heuristic_9.rs  human.rs  mod.rs  policy_1.rs  random.rs  registry.rs
src/ml/: encoding.rs  mod.rs  policy.rs  training.rs
tests/: heuristic12.rs  heuristic14.rs  heuristic15.rs  heuristic16.rs  heuristic17.rs  heuristic18.rs  ml.rs  rules.rs
